--- a/app/views/data_entries/_data_entry.html.erb
+++ b/app/views/data_entries/_data_entry.html.erb
@@ -24,6 +24,24 @@
     <%= data_entry.product_4_quantity %>
   </p>
 
+
+  <p>
+    <strong>Product 5 quantity:</strong>
+    <%= data_entry.product_5_quantity %>
+  </p>
+
+
+  <p>
+    <strong>Product 6 quantity:</strong>
+    <%= data_entry.product_6_quantity %>
+  </p>
+
+
+  <p>
+    <strong>Product 47 quantity:</strong>
+    <%= data_entry.product_7_quantity %>
+  </p>
+
   <p>
     <strong>Money paid:</strong>
     <%= data_entry.money_paid %>
