--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,6 +31,6 @@
   </div>
 <% end %>
 
-<div class="mt-3">Unhappy? <%= link_to"Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: " btn btn-link link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" %></div>
+<div class="mt-3">Unhappy? <%= button_to"Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: " btn btn-link link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" %></div>
 
 <%= link_to"Back", :back, class: "link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" %>
