--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%# <%= javascript_importmap_tags %> 
+    <%= javascript_include_tag 'application' %>
+    <%= turbo_include_tags %>
+
   </head>
 
   <body>
