--- a/app/views/pages/manager.html.erb
+++ b/app/views/pages/manager.html.erb
@@ -3,7 +3,7 @@
     <%# <p> Welcome, <%= current_user.firstname + ' ' + current_user.lastname %> 
     <%# <p>You are a [<%= current_user.role ]</p> %> 
     <%# <%= link_to "Add New Product +", new_product_path, style: "color: #097969; text-decoration: none; font-weight: bold; font-size:20px" %>
-    <%= link_to "sign out", destroy_user_session_path, 'data-turbo-method': :delete %>
+    <%= link_to "Sign Out", destroy_user_session_path, 'data-turbo-method': :delete %>
     <%# <p> there are <%= User.count  Users</p> 
     <%# <p> there are <%= Agrovet.count  Agrovets</p> %> 
     
