--- a/app/views/agrovets/agrovetinfo.html.erb
+++ b/app/views/agrovets/agrovetinfo.html.erb
@@ -46,12 +46,12 @@
               <td><%= @latest_product_5_data_entry_total %></td>
             </tr>
             <tr>
-              <td><%= @products.find(6).name %></td>
+              <td><%= @products.sixth.name %></td>
               <td><%= (@latest_data_entry&.product_6_quantity || 0) %></td>
               <td><%= @latest_product_6_data_entry_total %></td>
             </tr>
             <tr>
-              <td><%= @products.find(7).name %></td>
+              <td><%= @products.seventh.name %></td>
               <td><%= (@latest_data_entry&.product_7_quantity || 0) %></td>
               <td><%= @latest_product_7_data_entry_total %></td>
             </tr>
