--- a/app/views/agrovets/agrovetinfo.html.erb
+++ b/app/views/agrovets/agrovetinfo.html.erb
@@ -1,3 +1,5 @@
+
+<% if @agrovet.present%>
 <div class="container">
   <div class="row">
     <div class="col-md-6 mx-auto text-center">
@@ -75,3 +77,7 @@
     </div>
   </div>
 </div>
+<% else %>
+<p>No Agrovet</p>
+<% end %>
+
