Add contact Person to Agrovet

--- a/app/views/agrovets/_form.html.erb
+++ b/app/views/agrovets/_form.html.erb
@@ -36,6 +36,17 @@
         <%= f.label :owner_email, class: "form-label" %>
         <%= f.text_field :owner_email, class: "form-control" %>
       </div>
+
+    <div class="mb-3">
+        <%= f.label :contact_name, class: "form-label" %>
+        <%= f.text_field :contact_name, class: "form-control" %>
+      </div>
+
+      <div class="mb-3">
+        <%= f.label :contact_phone, class: "form-label" %>
+        <%= f.text_field :contact_phone, class: "form-control" %>
+      </div>
+
     </div>
 
     
