--- a/app/views/agrovets/_agrovet.html.erb
+++ b/app/views/agrovets/_agrovet.html.erb
@@ -24,5 +24,15 @@
     <%= agrovet.owner_email %>
   </p>
 
+  <p>
+    <strong>Contact Name:</strong>
+    <%= agrovet.contact_name %>
+  </p>
+
+  <p>
+    <strong>Contact Phone:</strong>
+    <%= agrovet.contact_phone %>
+  </p>
+
 
 </div>
